🎉 init(package.json): @tanstack/vue-query

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"@pureadmin/descriptions": "^1.2.1",
 		"@pureadmin/table": "^3.3.0",
 		"@pureadmin/utils": "^2.6.3",
+		"@tanstack/vue-query": "^5.92.1",
 		"@vue-flow/background": "^1.3.2",
 		"@vue-flow/core": "^1.48.0",
 		"@vueuse/core": "^14.1.0",
