--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"mint-filter": "^4.0.3",
 		"mitt": "^3.0.1",
 		"mqtt": "4.3.7",
+		"nitro": "3.0.1-alpha.1",
 		"nprogress": "^0.2.0",
 		"path-browserify": "^1.0.1",
 		"pinia": "^3.0.4",
@@ -174,7 +175,7 @@
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.49.0",
 		"unplugin-icons": "^22.5.0",
-		"vite": "^7.2.7",
+		"vite": "8.0.0-beta.2",
 		"vite-plugin-cdn-import": "^1.0.1",
 		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-fake-server": "^2.2.2",
