--- a/.github/workflows/deploy-github-page.yml
+++ b/.github/workflows/deploy-github-page.yml
@@ -63,7 +63,7 @@ jobs:
       - name: 上传打包产物
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "./docs/.vitepress/dist"
+          path: "dist"
 
       - name: 部署到github pages
         id: deployment
