--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
 		"up-taze": "pnpm up @ruan-cat/taze-config -L && npx taze -r",
 		"dev": "NODE_OPTIONS=--max-old-space-size=4096 vite",
 		"serve": "pnpm dev",
-		"build": "rimraf dist && NODE_OPTIONS=--max-old-space-size=8192 vite build && generate-version-file",
-		"build:staging": "rimraf dist && vite build --mode staging",
-		"report": "rimraf dist && vite build",
+		"build": "pnpm run build:vite",
+		"build:vite": "NODE_OPTIONS=--max-old-space-size=8192 vite build",
+		"build:cloudflare": "NITRO_PRESET=cloudflare_module NODE_OPTIONS=--max-old-space-size=8192 vite build",
+		"build:github": "NITRO_PRESET=github_pages NODE_OPTIONS=--max-old-space-size=8192 vite build",
+		"build:vercel": "NITRO_PRESET=vercel NODE_OPTIONS=--max-old-space-size=8192 vite build",
+		"build:staging": "vite build --mode staging",
+		"report": "vite build",
 		"preview": "vite preview",
 		"preview:build": "pnpm build && vite preview",
 		"typecheck": "tsc --noEmit && vue-tsc --noEmit --skipLibCheck",
@@ -175,7 +179,7 @@
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.49.0",
 		"unplugin-icons": "^22.5.0",
-		"vite": "8.0.0-beta.2",
+		"vite": "7.3.0",
 		"vite-plugin-cdn-import": "^1.0.1",
 		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-fake-server": "^2.2.2",
